@@ -1,5 +1,11 @@
 2004-07-10  Thomas Fitzsimmons  <fitzsim@redhat.com>
 
+	* java/awt/DefaultKeyboardFocusManager.java (dispatchEvent):
+	Set window's focus owner upon receiving a FOCUS_LOST event.
+	* java/awt/Window.java (Window()): Refocus the previously
+	focused component within the window when the window regains the
+	top-level focus.
+
 	* libgcj.pc.in: Remove library flags.
 
 2004-07-10  Graydon Hoare  <graydon@redhat.com>
